--- a/ArvidNyden/ArvidNyden.Client/wwwroot/index.html
+++ b/ArvidNyden/ArvidNyden.Client/wwwroot/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>ArvidNyden</title>
+    <title>Arvid Nyden</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
 </head>
 <body>
-    <app>Loading...</app>
+    <app>We be with you in a couple of seconds...</app>
 
     <script src="css/bootstrap/bootstrap-native.min.js"></script>
     <script type="blazor-boot"></script>
